@@ -22,8 +22,8 @@ class JCalibrationFile:public JCalibration{
 		virtual const char* className(void){return static_className();}
 		static const char* static_className(void){return "JCalibrationFile";}
 		
-		bool Get(string namepath, map<string, string> &svals);
-		bool Get(string namepath, vector< map<string, string> > &svals);
+		bool GetCalib(string namepath, map<string, string> &svals);
+		bool GetCalib(string namepath, vector< map<string, string> > &svals);
 		
 	protected:
 	
